--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@mui/material": "^5.11.5",
     "dotenv": "^16.0.1",
     "google-map-react": "^2.2.0",
     "jwt-decode": "^3.1.2",
@@ -10,6 +13,7 @@
     "react-dom": "^18.1.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^2.1.3",
+    "react-toastify": "^8.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
